[project]
name = "llvm-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages.find = { include = ["llvm_gym"] }
